@@ -1,4 +1,7 @@
 2007-Dec-10  Heikki Junnila <hjunnila@users.sf.net>
+	* Modified dummy out plugin to look like usbdmxout and dmx4linuxout.
+
+2007-Dec-10  Heikki Junnila <hjunnila@users.sf.net>
 	* Changed "Universe" to "Output" in DMX4Linux plugin's infoText().
 	* Added an array of errors for each usbdmx device in usbdmx plugin.
 	  These errors are displayed in infoText().
